--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(54, 54, 54);
+    background-size: cover;
+    background-image: url(img/10_background/background.png);
     margin: 0 !important;
 }
 
@@ -53,4 +54,8 @@ canvas {
 svg {
     background-color: transparent !important;
     filter: drop-shadow(0 0 0 0.3);
+}
+
+.fullscreenButton {
+    z-index: 10;
 }
