--- a/style.css
+++ b/style.css
@@ -24,9 +24,22 @@ h1 {
     margin-top: 20px;
 }
 
-h2 {
+.rotateDevice {
+    font-family: Arial, Helvetica, sans-serif;
     display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
     text-align: center;
+    z-index: 11;
+}
+
+.rotateDevice h2 {
+    color: white;
+    font-size: 60px !important;
 }
 
 .explenation {
@@ -45,14 +58,13 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding-top: 80px;
 }
 
 .explenationText p {
     margin: 0;
 }
 
-.explenationButton{
+.explenationButton {
     position: relative;
 }
 
@@ -197,9 +209,6 @@ canvas {
 }
 
 @media only screen and (max-width:720px) {
-    h2 {
-        display: block !important;
-    }
 
     canvas,
     #startIMG,
@@ -272,6 +281,10 @@ canvas {
 }
 
 @media only screen and (max-width:650px) {
+    .rotateDevice {
+        display: flex !important;
+    }
+
     .startButton {
         width: 150px !important;
         font-size: 20px;
